fix: comments are now handled within review comments

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "command-ask",
   "description": "A highly context aware organization integrated chatbot",
-  "ubiquity:listeners": ["issue_comment.created"],
+  "ubiquity:listeners": ["issue_comment.created", "pull_request_review_comment.created"],
   "skipBotEvents": true,
   "commands": {
     "ask": {
