--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "lint-staged": "15.2.7",
     "npm-run-all": "4.1.5",
     "prettier": "3.3.2",
+    "supabase": "^1.223.10",
     "ts-jest": "29.1.5",
     "ts-node": "^10.9.2",
     "typescript": "5.6.2",
